<resources>

    <string name="app_name">SmartyCalc</string>
    <string name="main_activity">Main Activity</string>
    <string name="standard">Standard</string>
    <string name="scientific">Scientific</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="delete">DEL</string>
    <string name="all_clear">AC</string>
    <string name="multiply">\u00d7</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="equals">=</string>
    <string name="decimal">.</string>
    <string name="negate">+/-</string>
    <string name="divide">\u00f7</string>
    <string name="mem_clear">MC</string>
    <string name="mem_return">MR</string>
    <string name="mem_store">MS</string>
    <string name="mem_plus">M+</string>
    <string name="mem_subtract">M-</string>
    <string name="sqrt">\u221a</string>
    <string name="percent">%</string>
    <string name="invert">1/x</string>
    <string name="squared">x\u00b2</string>
    <string name="memory">M</string>

</resources>
