<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5" >
     
        <View 
            android:id="@+id/panel_display" 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/panel_borders"
            android:layout_margin="10dp" />
        
        <TextView
            android:id="@+id/panel_memory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
	        android:layout_alignTop="@id/panel_display"
	        android:layout_alignLeft="@id/panel_display"
            
            android:layout_marginLeft="5dp"
            android:text="@string/memory"
            android:textSize="15sp" />
        
        <TextView
	        android:id="@+id/panel_function"
	        android:background="@drawable/function_borders"
	        android:layout_width="37dp"
	        android:layout_height="37dp"
	        android:layout_alignBottom="@id/panel_display"
	        android:layout_alignLeft="@id/panel_display"
	        android:layout_marginLeft="5dp"
	        android:layout_marginBottom="5dp"
	        android:padding="5dp"
	        android:text="@string/divide"
	        android:gravity="center"
	        
	        android:textSize="20sp" />
        
        <TextView
            android:id="@+id/panel_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="15dp"
            android:textSize="45sp"
            android:gravity="right|bottom"
            android:paddingBottom="10dp" />
            
    </RelativeLayout>
     
     
     
    
	<TableLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="1" >
	    
	    <TableRow
	        android:id="@+id/row1"
	        android:layout_weight="1"
	        android:layout_width="match_parent"
	        android:layout_height="0dp" >
	        
	        <Button
	            android:id="@+id/standard_mem_clear"
	            style="@style/standard_button"
	            android:text="@string/mem_clear"
	            android:layout_marginLeft="10dp" />
	        <Button
	            android:id="@+id/standard_mem_return"
	            style="@style/standard_button"
	            android:text="@string/mem_return" />
	        <Button 
	            android:id="@+id/standard_mem_store"
	            style="@style/standard_button"
	            android:text="@string/mem_store" />
	        <Button 
	            android:id="@+id/standard_mem_plus"
	            style="@style/standard_button"
	            android:text="@string/mem_plus" />
	        <Button
	            android:id="@+id/standard_mem_subtract"
	            style="@style/standard_button"
	            android:text="@string/mem_subtract"
	            android:layout_marginRight="10dp" />
	        
	        
	    </TableRow>
	    
	    <TableRow
	        android:id="@+id/row2"
	        android:layout_weight="1"
	        android:layout_width="match_parent"
	        android:layout_height="0dp" >
	        
	        <Button
	            android:id="@+id/standard_sqrt"
	            style="@style/standard_button"
	            android:text="@string/sqrt"
	            android:layout_marginLeft="10dp" />
	        <Button
	            android:id="@+id/standard_squared"
	            style="@style/standard_button"
	            android:text="@string/squared" />
	        <Button
	            android:id="@+id/standard_percent"
	            style="@style/standard_button"
	            android:text="@string/percent" />
	        <Button
	            android:id="@+id/standard_invert"
	            style="@style/standard_button"
	            android:text="@string/invert" />
	        <Button
	            android:id="@+id/standard_negate"
	            style="@style/standard_button"
	            android:text="@string/negate"
	            android:layout_marginRight="10dp" />
	        
	    </TableRow>
	    
	    <TableRow
	        android:id="@+id/row3"
	        android:layout_weight="1"
	        android:layout_width="match_parent"
	        android:layout_height="0dp" >
	        
	        <Button
		        android:id="@+id/standard_7"
		        style="@style/standard_button"
		        android:text="@string/seven"
		        android:layout_marginLeft="10dp"
		        android:background="@drawable/num_button_colors" />
		    <Button
		        android:id="@+id/standard_8"
		        style="@style/standard_button"
		        android:text="@string/eight"
		        android:background="@drawable/num_button_colors" />
		    <Button
		        android:id="@+id/standard_9"
		        style="@style/standard_button"
		        android:text="@string/nine"
		        android:background="@drawable/num_button_colors" />
		    <Button
		        android:id="@+id/standard_delete"
		        style="@style/standard_button"
		        android:text="@string/delete"
		        android:background="@drawable/delete_button_colors" />
		    <Button 
		        android:id="@+id/standard_all_clear"
		    	style="@style/standard_button"
		    	android:text="@string/all_clear"
		    	android:background="@drawable/delete_button_colors"
		    	android:layout_marginRight="10dp" />
	    </TableRow>
	    
	    <TableRow
	        android:id="@+id/row4"
	        android:layout_weight="1"
	        android:layout_width="match_parent"
	        android:layout_height="0dp" >
	        
	        <Button
		        android:id="@+id/standard_4"
		        style="@style/standard_button"
		        android:text="@string/four"
		        android:layout_marginLeft="10dp"
		        android:background="@drawable/num_button_colors" />
		    <Button
		        android:id="@+id/standard_5"
		        style="@style/standard_button"
		        android:text="@string/five"
		        android:background="@drawable/num_button_colors" />
		    <Button
		        android:id="@+id/standard_6"
		        style="@style/standard_button"
		        android:text="@string/six"
		        android:background="@drawable/num_button_colors" />
		    <Button
		        android:id="@+id/standard_multiply"
		        style="@style/standard_button"
		        android:text="@string/multiply" />
		    <Button
		        android:id="@+id/standard_divide"
		        style="@style/standard_button"
		        android:layout_marginRight="10dp"
		        android:text="@string/divide" />
	    </TableRow>
	    
	    <TableRow
	        android:id="@+id/row5"
	       	android:layout_weight="1"
	        android:layout_width="match_parent"
	        android:layout_height="0dp" >
	        
	        <Button
		        android:id="@+id/standard_1"
		        style="@style/standard_button"
		        android:text="@string/one"
		        android:layout_marginLeft="10dp"
		        android:background="@drawable/num_button_colors" />
	   		<Button
		        android:id="@+id/standard_2"
		        style="@style/standard_button"
		        android:text="@string/two"
		        android:background="@drawable/num_button_colors" />
	    	<Button
		        android:id="@+id/standard_3"
		        style="@style/standard_button"
		        android:text="@string/three"
		        android:background="@drawable/num_button_colors" />
	    	<Button
	    	    android:id="@+id/standard_add"
	    	    style="@style/standard_button"
	    	    android:text="@string/add" />
	    	<Button
	    	    android:id="@+id/standard_subtract"
	    	    style="@style/standard_button"
	    	    android:layout_marginRight="10dp"
	    	    android:text="@string/subtract" />
	    </TableRow>
	    
	    <TableRow
	        android:id="@+id/row_bottom"
	       	android:layout_weight="1"
	        android:layout_width="match_parent"
	        android:layout_height="0dp" >
	        
	        <Button
		        android:id="@+id/standard_0"
		        style="@style/standard_button"
		        android:layout_weight="2.1"
		        android:text="@string/zero"
		        android:layout_marginLeft="10dp"
		        android:layout_marginBottom="10dp"
		        android:background="@drawable/num_button_colors" />
	        <Button
	            android:id="@+id/standard_decimal"
	            style="@style/standard_button"
	            android:text="@string/decimal"
	            android:layout_marginBottom="10dp"
	            android:background="@drawable/num_button_colors" />
	        <Button
	            android:id="@+id/standard_equals"
	            android:layout_weight="2.1"
	            style="@style/standard_button"
	            android:layout_marginRight="10dp"
	            android:layout_marginBottom="10dp"
	            android:text="@string/equals" />
	    </TableRow>
	</TableLayout>
</LinearLayout>